--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Oct 28 12:12:41 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	socketcompat.h: simplify, to match latest gnulib
+	Now, sys/socket.h is always available, and errno works.
+
 Tue Oct 28 12:07:46 +0100 2008 Jim Meyering <meyering@redhat.com>
 
 	updates from gnulib
