--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Oct 28 13:29:13 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	* src/remote_internal.c (remoteFindDaemonPath) [!WIN32]: Don't compile.
+
 Tue Oct 28 13:29:05 +0100 2008 Jim Meyering <meyering@redhat.com>
 
 	use errno, not socket_errno()
