cvsignore mingw build artifacts: *.exe

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Tue Oct 28 13:29:14 +0100 2008 Jim Meyering <meyering@redhat.com>
 
+	cvsignore mingw build artifacts: *.exe
+
+Tue Oct 28 13:29:14 +0100 2008 Jim Meyering <meyering@redhat.com>
+
 	include netinet etc #ifndef HAVE_WINSOCK2_H
 
 Tue Oct 28 13:29:13 +0100 2008 Jim Meyering <meyering@redhat.com>
