--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 Tue Oct 28 13:29:14 +0100 2008 Jim Meyering <meyering@redhat.com>
 
+	avoid many mingw-specific warnings
+	* tests/virshtest.c (mymain): Use only one definition of this function.
+	[WIN32]: Call exit(77) to skip the test.
+	* tests/nodeinfotest.c: Likewise.
+
+Tue Oct 28 13:29:14 +0100 2008 Jim Meyering <meyering@redhat.com>
+
 	cvsignore mingw build artifacts: *.exe
 
 Tue Oct 28 13:29:14 +0100 2008 Jim Meyering <meyering@redhat.com>
