--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Oct 28 13:46:50 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	make generated qemud/*.[ch] files read-only
+	* qemud/Makefile.am (.x.c): Rewrite not to write directly to $@,
+	and to make generated files read-only.
+	(.x.h): Likewise.
+
 Tue Oct 28 13:29:14 +0100 2008 Jim Meyering <meyering@redhat.com>
 
 	avoid compiler warning when all storage backends are disabled
