--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Oct 29 16:33:16 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* docs/relatedlinks.html docs/relatedlinks.html.in: add link
+	  for AMQP/QPid bindings
+
 Wed Oct 29 15:25:28 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/domain_conf.h src/qemu_driver.c: patch adding hor removal of
