--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Oct 30 13:39:00 EST 2008 Cole Robinson <crobinso@redhat.com>
+
+	* src/test.c: Add a test storage driver.
+
 Wed Oct 29 16:33:16 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* docs/relatedlinks.html docs/relatedlinks.html.in: add link
