* src/xm_internal.c: add minimum domain memory size check for Xen   patch by Shigeki Sakamoto * AUTHORS: add Shigeki Sakamoto Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -53,6 +53,7 @@ Patches have also been contributed by:
   James Morris         <jmorris@namei.org>
   Chris Wrigh          <chrisw@redhat.com>
   Ben Guthro           <bguthro@virtualiron.com>
+  Shigeki Sakamoto     <fj0588di@aa.jp.fujitsu.com>
 
 
   [....send patches to get your name here....]
