--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Oct 31 14:04:52 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/xm_internal.c: add minimum domain memory size check for Xen
+	  patch by Shigeki Sakamoto
+	* AUTHORS: add Shigeki Sakamoto
+
 Fri Oct 31 11:11:30 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* python/Makefile.am python/generator.py python/libvir.c
