--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue, 4 Nov 2008 14:58:30 +0100 Jim Meyering <meyering@redhat.com>
+
+	add a test for today's fix
+	* tests/cpuset: New script.  Test for today's fix.
+	* tests/Makefile.am (test_scripts): Add cpuset.
+
 Mon Nov  3 17:12:21 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* AUTHORS: added Guido Günther as new commiter, Dan Smith was missing
