--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,27 @@
+Tue Nov  4 22:20:31 UTC 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	Move internal error API declarations into their own file
+	* src/Makefile.am, src/virterror_internal.h: Add file for
+	internal error reporting APIs.
+	* src/internal.c: Remove virRaiseError/virReportError API
+	declarations
+	* src/conf.c, src/domain_conf.c, src/hash.c,
+	src/libvirt.c, src/lxc_conf.c, src/lxc_conf.h,
+	src/lxc_container.c, src/lxc_controller.c, src/lxc_driver.c,
+	src/network_conf.c, src/network_driver.c, src/nodeinfo.c,
+	src/openvz_conf.c, src/openvz_conf.h, src/openvz_driver.c,
+	src/proxy_internal.c, src/qemu_conf.c, src/qemu_conf.h,
+	src/qemu_driver.c, src/qparams.c, src/remote_internal.c,
+	src/sexpr.c, src/stats_linux.c, src/storage_backend.c,
+	src/storage_backend_disk.c, src/storage_backend_fs.c,
+	src/storage_backend_iscsi.c, src/storage_backend_logical.c,
+	src/storage_conf.c, src/storage_conf.h, src/storage_driver.c,
+	src/test.c, src/util.c, src/virterror.c, src/xen_internal.c,
+	src/xen_unified.c, src/xend_internal.c, src/xm_internal.c,
+	src/xml.c, src/xmlrpc.c, src/xs_internal.c: Add includes
+	of new virterror_internal.h file where required, and remove
+	leading __ from virRaiseError api calls
+
 Tue Nov  4 22:14:31 UTC 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	Support passing UUID and ID to qemu/xenner
