--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Nov  5 13:56:00 EST 2008 Cole Robinson <crobinso@redhat.com>
+
+	* src/util.c: Log stdout and stderr in virRun
+
 Wed Nov  5 13:39:00 EST 2008 Cole Robinson <crobinso@redhat.com>
 
 	* src/util.c: Log the argv passed to virExec and virRun
