--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Thu Nov  6 17:33:34 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/logging.c src/logging.h proxy/Makefile.am proxy/libvirt_proxy.c
+	  src/Makefile.am src/cgroup.c src/datatypes.c src/domain_event.c
+	  src/internal.h src/libvirt.c src/lxc_container.c src/lxc_controller.c
+	  src/lxc_driver.c src/proxy_internal.c src/qemu_driver.c
+	  src/remote_internal.c src/storage_backend_disk.c src/util.c
+	  src/veth.c src/xen_internal.c src/xen_unified.c src/xend_internal.c:
+	  add new logging module, and move existing definitions there
+
 Wed Nov  5 13:56:00 EST 2008 Cole Robinson <crobinso@redhat.com>
 
 	* src/util.c: Log stdout and stderr in virRun
