--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Nov 11 15:51:42 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/storage_backend.c, src/storage_backend.h, src/storage_driver.c:
+	Decouple backend impls from generic backend code, by making driver
+	register backends at startup
+
 Mon Nov 10 12:05:42 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/openvz_conf.c: Read filesytem template name from config
