--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Nov 17 10:43:00 GMT 2008 Daniel Berrange <berrange@redhat.com>
+
+	* src/Makefile.am: Build drivers as libtool convenience libs
+
 Mon Nov 17 10:23:00 GMT 2008 Daniel Berrange <berrange@redhat.com>
 
 	* docs/libvirt-api.xml: Re-generate
