--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Nov 20 14:31:00 GMT 2008 Daniel Berrange <berrange@redhat.com>
+
+	* src/remote_internal.c: Avoid crash on NULL URI scheme
+
 Wed Nov 19 16:51:00 GMT 2008 Daniel Berrange <berrange@redhat.com>
 
 	Add User Mode Linux driver
