Allow UML build to be disabled in RPM

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Nov 21 10:07:14 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* libvirt.spec.in: Add conditional to allow UML driver to be
+	disabled
+
 Fri Nov 21 11:05:14 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* po/POTFILES.in src/uml_conf.h src/uml_driver.c: fixes syntax
