--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Nov 21 11:37:14 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/domain_conf.c: Fix two memory leaks in virDomainLoadConfig
+	* src/lxc_driver.c: Fix leak of capabilities object in driver
+	shutdown code
+
 Fri Nov 21 10:20:14 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/remote_internal.c: Return VIR_NO_SUPPORT if requested
